# objective-git

./: .gitignore  .gitmodules  .travis.yml  CMakeLists.txt  Cartfile  Cartfile.private  Cartfile.resolved  GHUnitIOSTestMain.m  GHUnitTestMain.m  GTEnum.h  Info.plist  LICENSE  Makefile  ObjectiveGit.modulemap  ObjectiveGitFramework_Prefix.pch  README.md  Tests-Info.plist  Tests-iOS-Info.plist  build_iphone_framework  dct_weak.h  module.map  module.modulemap  update_libgit2  update_libgit2.sh
Classes/: GHWalkable.h  GTBlame.h  GTBlame.m  GTBlameHunk.h  GTBlameHunk.m  GTBlob.h  GTBlob.m  GTBranch.h  GTBranch.m  GTCommit.h  GTCommit.m  GTConfiguration+Private.h  GTConfiguration.h  GTConfiguration.m  GTCred+Private.h  GTCred.h  GTCred.m  GTCredential+Private.h  GTCredential.h  GTCredential.m  GTDiff+Private.h  GTDiff.h  GTDiff.m  GTDiffDelta.h  GTDiffDelta.m  GTDiffFile.h  GTDiffFile.m  GTDiffHunk.h  GTDiffHunk.m  GTDiffLine.h  GTDiffLine.m  GTDiffPatch.h  GTDiffPatch.m  GTEnumerator.h  GTEnumerator.m  GTFetchHeadEntry.h  GTFetchHeadEntry.m  GTFilter.h  GTFilter.m  GTFilterList.h  (+82 more)
Git2Mac/: Git2Mac-Info.plist
ObjectiveGit/: GTAnnotatedCommit.h  GTAnnotatedCommit.m  GTBlame.h  GTBlame.m  GTBlameHunk.h  GTBlameHunk.m  GTBlob.h  GTBlob.m  GTBranch.h  GTBranch.m  GTCheckoutOptions.h  GTCheckoutOptions.m  GTCommit.h  GTCommit.m  GTConfiguration+Private.h  GTConfiguration.h  GTConfiguration.m  GTCredential+Private.h  GTCredential.h  GTCredential.m  GTDiff+Private.h  GTDiff.h  GTDiff.m  GTDiffDelta.h  GTDiffDelta.m  GTDiffFile.h  GTDiffFile.m  GTDiffHunk.h  GTDiffHunk.m  GTDiffLine.h  GTDiffLine.m  GTDiffPatch.h  GTDiffPatch.m  GTEnumerator.h  GTEnumerator.m  GTFetchHeadEntry.h  GTFetchHeadEntry.m  GTFilter.h  GTFilter.m  GTFilterList.h  (+74 more)
ObjectiveGitFramework.xcodeproj/: project.pbxproj
ObjectiveGitFramework.xcworkspace/: contents.xcworkspacedata
ObjectiveGitTests/: Contants.h  GTAnnotatedCommitSpec.m  GTBlameSpec.m  GTBlobSpec.m  GTBlobTest.m  GTBranchSpec.m  GTBranchTest.m  GTCommitSpec.m  GTCommitTest.m  GTConfigurationSpec.m  GTConfigurationTest.m  GTDiffDeltaSpec.m  GTDiffSpec.m  GTDiffTest.h  GTDiffTest.m  GTEnumeratorSpec.m  GTFilterListSpec.m  GTFilterSpec.m  GTIndexSpec.m  GTIndexTest.m  GTLibTest.m  (+48 more)
(+109 files in other folders)
